fix back button not visible #85

--- a/themes/gruvbox.css
+++ b/themes/gruvbox.css
@@ -14,7 +14,7 @@ body {
   color: #d79921;
 }
 
-#right-wing text {
+#left-wing, #right-wing text {
   color: #ebdbb2;
 }
 
