--- a/themes/monokai.css
+++ b/themes/monokai.css
@@ -14,7 +14,7 @@ body {
   color: #A6E22E;
 }
 
-#right-wing text {
+#left-wing, #right-wing text {
   color: #F8F8F2;
 }
 
